--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>Site para exemplo de Git</h1>
         <h2>Exemplo</h2>
+        <h3>Teste diff</h3>
     </header>
     <nav>
         <ul>
