Adicionando Parágrafos na página.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <section class="conteudo">
         <h2>Bem-Vindo ao Nosso Site</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum nobis quo accusamus sed labore in blanditiis quia, voluptate fuga cumque, illum alias culpa debitis. Quas fuga eius vitae reprehenderit quidem?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores doloremque inventore facere vero suscipit, quod, nemo, nobis amet veritatis repudiandae ullam commodi assumenda accusamus facilis nisi quam nihil aliquam obcaecati!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ex illo veniam exercitationem atque alias, facilis, maiores est, quidem sunt cupiditate. Ullam itaque laborum voluptatem. Eos quidem quod possimus repudiandae?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, nesciunt. Sit quo sed blanditiis necessitatibus ad hic temporibus modi reiciendis animi. Pariatur iure laborum harum minima, doloremque numquam nemo ex?</p>
     </section>
     <footer>
         <p>&copy; 2026 Todos os direitos reservados</p>
